Jenkins file added

--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
 						<image>openjdk:11</image>
 					</from>
 					<to>
-						<image>registry.hub.docker.com/dailycodebuffer/cloudgateway</image>
+						<image>${REPO_URL}/cloudgateway</image>
 						<tags>${project.version}</tags>
 					</to>
 				</configuration>
