--- a/k8s/cloud-gateway-deployment.yaml
+++ b/k8s/cloud-gateway-deployment.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
       - name: cloud-gateway-app
-        image: dailycodebuffer/cloudgateway
+        image: IMAGE_URL/cloudgateway
         imagePullPolicy: Always
         ports:
         - containerPort: 9090
